--- a/web/girl/girlCamera.html
+++ b/web/girl/girlCamera.html
@@ -8,6 +8,7 @@
 
     <!-- Face -->
     <script src="/src/girl/face/girlsEyeBrows.js"></script>
+    <script src="/src/girl/face/bindi.js"></script>
 
 
     <!-- Body -->
