--- a/web/girl/girlCamera.html
+++ b/web/girl/girlCamera.html
@@ -9,6 +9,7 @@
     <!-- Face -->
     <script src="/src/girl/face/girlsEyeBrows.js"></script>
     <script src="/src/girl/face/bindi.js"></script>
+    <script src="/src/girl/face/girlsEyes.js"></script>
 
 
     <!-- Body -->
@@ -35,46 +36,3 @@
 </body>
 </html>
 
-
-class GirlsEyeBrow {
-    constructor() {}
-  
-    createNiceEyebrow(eyeBrowLandmarks, eyeBrowsSize) {
-      let leftEyeBrow = eyeBrowLandmarks.leftEyebrowUpper;
-      fill(0);
-      beginShape();
-      for (let i = 0; i < leftEyeBrow.length; i++) {
-        let currentPoint = scalePoint(leftEyeBrow[i]);
-        let nextPoint = scalePoint(leftEyeBrow[i + 1]);
-  
-        if (i === leftEyeBrow.length - 1) {
-          vertex(currentPoint.x, currentPoint.y - eyeBrowsSize);
-        } else {
-          let controlPointX = (currentPoint.x + nextPoint.x) / 2;
-          let controlPointY = (currentPoint.y - eyeBrowsSize);
-          vertex(currentPoint.x, currentPoint.y);
-          quadraticVertex(controlPointX, controlPointY, nextPoint.x, nextPoint.y);
-        }
-      }
-      endShape();
-  
-      let rightEyeBrow = eyeBrowLandmarks.rightEyebrowUpper;
-      fill(9);
-      beginShape();
-      for (let i = 0; i < rightEyeBrow.length; i++) {
-        let currentPoint = scalePoint(rightEyeBrow[i]);
-        let nextPoint = scalePoint(rightEyeBrow[i + 1]);
-  
-        if (i === rightEyeBrow.length - 1) {
-          vertex(currentPoint.x, currentPoint.y - eyeBrowsSize);
-        } else {
-          let controlPointX = (currentPoint.x + nextPoint.x) / 2;
-          let controlPointY = (currentPoint.y - eyeBrowsSize);
-          vertex(currentPoint.x, currentPoint.y);
-          quadraticVertex(controlPointX, controlPointY, nextPoint.x, nextPoint.y);
-        }
-      }
-      endShape();
-    }
-  }
-  
