--- a/web/girl/girlCamera.html
+++ b/web/girl/girlCamera.html
@@ -10,6 +10,10 @@
     <script src="/src/girl/face/girlsEyeBrows.js"></script>
     <script src="/src/girl/face/bindi.js"></script>
     <script src="/src/girl/face/girlsEyes.js"></script>
+    <script src="/src/girl/face/girlsNose.js"></script>
+    <script src="/src/girl/face/girlCheeks.js"></script>
+    <script src="/src/girl/face/girlLips.js"></script>
+    <script src="/src/anim/face/hairs.js"></script>
 
 
     <!-- Body -->
