--- a/web/girl/girlCamera.html
+++ b/web/girl/girlCamera.html
@@ -14,6 +14,7 @@
     <script src="/src/girl/face/girlCheeks.js"></script>
     <script src="/src/girl/face/girlLips.js"></script>
     <script src="/src/anim/face/hairs.js"></script>
+    <script src="/src/girl/face/girlsEars.js"></script>
 
 
     <!-- Body -->
