adding girls hairs.

--- a/web/girl/girlCamera.html
+++ b/web/girl/girlCamera.html
@@ -15,6 +15,7 @@
     <script src="/src/girl/face/girlLips.js"></script>
     <script src="/src/anim/face/hairs.js"></script>
     <script src="/src/girl/face/girlsEars.js"></script>
+    <script src="/src/girl/face/girlsHair.js"></script>
 
 
     <!-- Body -->
