Everything is going to be ready!.

--- a/web/girl/girlCamera.html
+++ b/web/girl/girlCamera.html
@@ -19,9 +19,10 @@
 
 
     <!-- Body -->
-    <script src='/src/anim/bodyParts/tummy.js'></script>
-    <script src='/src/anim/bodyParts/hands.js'></script>
-    <script src='/src/anim/bodyParts/legs.js'></script>
+    <script src='/src/girl/body/girlTummy.js'></script>
+    <script src='/src/girl/body/girlHands.js'></script>
+    <!-- <script src='/src/anim/bodyParts/hands.js'></script>
+    <script src='/src/anim/bodyParts/legs.js'></script> -->
 
     <!-- Clothes -->
     <script src='/src/anim/clothes/shirt.js'></script>
