add Anjali Skirt.

--- a/web/girl/girlCamera.html
+++ b/web/girl/girlCamera.html
@@ -21,11 +21,10 @@
     <!-- Body -->
     <script src='/src/girl/body/girlTummy.js'></script>
     <script src='/src/girl/body/girlHands.js'></script>
-    <!-- <script src='/src/anim/bodyParts/hands.js'></script>
-    <script src='/src/anim/bodyParts/legs.js'></script> -->
 
     <!-- Clothes -->
     <script src='/src/girl/clothes/girlPant.js'></script>
+    <script src='/src/girl/clothes/girlSkirt.js'></script>
 
     <!-- Main Code. -->
     <script src='/src/girl/facemain.js'></script>
