--- a/web/time/ghadi.html
+++ b/web/time/ghadi.html
@@ -45,6 +45,9 @@
     <script src='/src/ghadi/ghadiBody.js'></script>
     <script src='/src/ghadi/ghadiFace.js'></script>
     <script src='/src/ghadi/ghadimain.js'></script>
+
+    <!-- Ghadi LOGO -->
+    <script src="/src/ghadi/ghadiLogo.js"></script>
     
     
 </head>
