Ghadi is Perfectly WORKING.

--- a/web/time/ghadi.html
+++ b/web/time/ghadi.html
@@ -33,8 +33,10 @@
 
     <!-- Body -->
     <script src='/src/anim/bodyParts/tummy.js'></script>
-    <script src='/src/anim/bodyParts/hands.js'></script>
+    <!-- <script src='/src/anim/bodyParts/hands.js'></script> -->
+
     <script src='/src/anim/bodyParts/legs.js'></script>
+    <script src='/src/girl/body/girlHands.js'></script>
 
     <!-- Clothes -->
     <script src='/src/anim/clothes/shirt.js'></script>
